# trexio_integration_sandpit

./: CMakeLists.txt  main.F90
my_module/: CMakeLists.txt  my_header.f90  my_module.f90
